cmake_minimum_required(VERSION 3.7)
project(variant_parse)
set(CMAKE_CXX_COMPILER g++-7)
#set(CMAKE_CXX_COMPILER clang++-5.0)
set(CMAKE_CXX_STANDARD 17)
set(WARNINGS "-Wall -Wextra -Wpedantic -Wshadow")
#set(SANITIZERS "-fsanitize=address,undefined")
set(CMAKE_CXX_FLAGS "${WARNINGS} ${SANITIZERS}")

set(SOURCE_FILES main.cpp lex.cpp lex.hpp overload.hpp calculator.hpp calculator.cpp)
add_executable(variant_parse ${SOURCE_FILES})